# rust-avro

./: .editorconfig  .travis.yml  Cargo.toml  LICENSE-MIT  README.md  index.html  search-index.js
avro/: EnumSchema.t.html  EnumSymbol.t.html  FixedSchema.t.html  RecordSchema.t.html  Schema.t.html  decode_var_len_u64.v.html  decode_zig_zag.v.html  encode_var_len_u64.v.html  enum.DecodeErrorKind.html  enum.Schema.html  enum.Value.html  fn.decode.html  fn.decode_var_len_u64.html  fn.decode_zig_zag.html  fn.encode.html  fn.encode_var_len_u64.html  fn.encode_zig_zag.html  fn.parse_idl.html  index.html  parse_idl.v.html  sidebar-items.js  struct.DecodeError.html  struct.EnumSchema.html  struct.EnumSymbol.html  struct.Field.html  struct.FixedSchema.html  struct.IdlError.html  struct.Lexer.html  struct.Message.html  struct.Property.html  struct.Protocol.html  struct.RecordSchema.html
avro/decode/: enum.DecodeErrorKind.html  fn.decode.html  fn.decode_var_len_u64.html  fn.decode_zig_zag.html  (+1 more)
num/: fn.abs.html  fn.abs_sub.html  fn.clamp.html  fn.signum.html  index.html  struct.BigInt.html  struct.BigUint.html  struct.Complex.html  trait.Bounded.html  trait.FromPrimitive.html  trait.Num.html  trait.NumCast.html  trait.One.html  trait.Signed.html  trait.ToPrimitive.html  trait.Unsigned.html  trait.Zero.html
num_bigint/: index.html
num_complex/: index.html
num_rational/: index.html  struct.Ratio.html
serde/: index.html
serde_json/: index.html
src/: decode.rs  encode.rs  idl.rs  lib.rs
tests/: java_compat_obj_file.java  java_compat_obj_file.rs  util.rs
(+219 files in other folders)
