[package]
name = "avro"
version = "0.2.1"
authors = ["Jordan Miner <jminer7@gmail.com>"]
description = "A Rust implementation of Apache Avro"
repository = "https://github.com/jminer/rust-avro"
license = "Apache-2.0/MIT"
readme = "README.md"

[dependencies]
regex = "0.1.48"
serde_json = "0.6"

[dev-dependencies]
hyper = "0.10.10"

[features]
java-compat = []
